# sn

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  dist-workspace.toml
.claude-plugin/: plugin.json
.claude/skills/: sn.md
.github/workflows/: ci.yml  release.yml  scorecard.yml  security.yml
docs/: agent-guide.md
docs/superpowers/plans/: 2026-04-22-sn-cli-v1-implementation.md
docs/superpowers/specs/: 2026-04-22-sn-cli-table-api-design.md
skills/sn/: SKILL.md
src/: body.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  observability.rs  output.rs  query.rs
src/cli/: aggregate.rs  app.rs  atf.rs  attachment.rs  auth.rs  catalog.rs  change.rs  cmdb.rs  identify.rs  import.rs  init.rs  introspect.rs  mod.rs  profile.rs  progress.rs  schema.rs  scores.rs  table.rs  update_set.rs
tests/: auth.rs  cicd.rs  client_basic.rs  client_retry.rs  init.rs  introspect.rs  new_apis.rs  pagination.rs  schema.rs  table_create.rs  table_delete.rs  table_get.rs  table_list.rs  table_write.rs
tests/common/: mod.rs
