[package]
name = "sn"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Agent-forward CLI wrapper for the ServiceNow Table API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ibrahimsafah/sn"
default-run = "sn"

[lib]
name = "sn"
path = "src/lib.rs"

[[bin]]
name = "sn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "suggestions", "wrap_help"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
rpassword = "7"
thiserror = "1"
is-terminal = "0.4"
backoff = "0.4"
url = "2"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
